naosql/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> command SEMICOLON
Rule 4     statement -> command
Rule 5     command -> create_database
Rule 6     command -> use_database
Rule 7     command -> create_table
Rule 8     command -> show_tables
Rule 9     command -> insert
Rule 10    command -> select
Rule 11    command -> update
Rule 12    command -> delete
Rule 13    command -> drop_table
Rule 14    command -> drop_database
Rule 15    command -> exit
Rule 16    create_database -> CREATE DATABASE ID
Rule 17    use_database -> USE ID
Rule 18    create_table -> CREATE TABLE ID LPAREN column_def_list RPAREN
Rule 19    column_def_list -> column_def
Rule 20    column_def_list -> column_def_list COMMA column_def
Rule 21    column_def -> ID INT
Rule 22    column_def -> ID CHAR LPAREN NUMBER RPAREN
Rule 23    show_tables -> SHOW TABLES
Rule 24    insert -> INSERT INTO ID VALUES LPAREN value_list RPAREN
Rule 25    value_list -> value
Rule 26    value_list -> value_list COMMA value
Rule 27    value -> NUMBER
Rule 28    value -> STRING
Rule 29    value -> ID
Rule 30    select -> SELECT select_fields FROM ID where_clause_opt
Rule 31    select_fields -> STAR
Rule 32    select_fields -> id_list
Rule 33    id_list -> ID
Rule 34    id_list -> id_list COMMA ID
Rule 35    update -> UPDATE ID SET ID EQ value where_clause_opt
Rule 36    delete -> DELETE FROM ID where_clause_opt
Rule 37    drop_table -> DROP TABLE ID
Rule 38    drop_database -> DROP DATABASE ID
Rule 39    exit -> EXIT
Rule 40    where_clause_opt -> WHERE expr
Rule 41    where_clause_opt -> empty
Rule 42    expr -> expr AND expr
Rule 43    expr -> expr OR expr
Rule 44    expr -> value EQ value
Rule 45    expr -> value NE value
Rule 46    expr -> value LT value
Rule 47    expr -> value LE value
Rule 48    expr -> value GT value
Rule 49    expr -> value GE value
Rule 50    expr -> LPAREN expr RPAREN
Rule 51    expr -> value
Rule 52    empty -> <empty>

Terminals, with rules where they appear

AND                  : 42
CHAR                 : 22
COMMA                : 20 26 34
CREATE               : 16 18
DATABASE             : 16 38
DELETE               : 36
DROP                 : 37 38
EQ                   : 35 44
EXIT                 : 39
FROM                 : 30 36
GE                   : 49
GT                   : 48
ID                   : 16 17 18 21 22 24 29 30 33 34 35 35 36 37 38
INSERT               : 24
INT                  : 21
INTO                 : 24
LE                   : 47
LPAREN               : 18 22 24 50
LT                   : 46
NE                   : 45
NUMBER               : 22 27
OR                   : 43
RPAREN               : 18 22 24 50
SELECT               : 30
SEMICOLON            : 3
SET                  : 35
SHOW                 : 23
STAR                 : 31
STRING               : 28
TABLE                : 18 37
TABLES               : 23
UPDATE               : 35
USE                  : 17
VALUES               : 24
WHERE                : 40
error                : 

Nonterminals, with rules where they appear

column_def           : 19 20
column_def_list      : 18 20
command              : 3 4
create_database      : 5
create_table         : 7
delete               : 12
drop_database        : 14
drop_table           : 13
empty                : 41
exit                 : 15
expr                 : 40 42 42 43 43 50
id_list              : 32 34
insert               : 9
select               : 10
select_fields        : 30
show_tables          : 8
statement            : 1 2
statements           : 1 0
update               : 11
use_database         : 6
value                : 25 26 35 44 44 45 45 46 46 47 47 48 48 49 49 51
value_list           : 24 26
where_clause_opt     : 30 35 36

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . command SEMICOLON
    (4) statement -> . command
    (5) command -> . create_database
    (6) command -> . use_database
    (7) command -> . create_table
    (8) command -> . show_tables
    (9) command -> . insert
    (10) command -> . select
    (11) command -> . update
    (12) command -> . delete
    (13) command -> . drop_table
    (14) command -> . drop_database
    (15) command -> . exit
    (16) create_database -> . CREATE DATABASE ID
    (17) use_database -> . USE ID
    (18) create_table -> . CREATE TABLE ID LPAREN column_def_list RPAREN
    (23) show_tables -> . SHOW TABLES
    (24) insert -> . INSERT INTO ID VALUES LPAREN value_list RPAREN
    (30) select -> . SELECT select_fields FROM ID where_clause_opt
    (35) update -> . UPDATE ID SET ID EQ value where_clause_opt
    (36) delete -> . DELETE FROM ID where_clause_opt
    (37) drop_table -> . DROP TABLE ID
    (38) drop_database -> . DROP DATABASE ID
    (39) exit -> . EXIT

    CREATE          shift and go to state 15
    USE             shift and go to state 16
    SHOW            shift and go to state 17
    INSERT          shift and go to state 18
    SELECT          shift and go to state 19
    UPDATE          shift and go to state 20
    DELETE          shift and go to state 21
    DROP            shift and go to state 22
    EXIT            shift and go to state 23

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    command                        shift and go to state 3
    create_database                shift and go to state 4
    use_database                   shift and go to state 5
    create_table                   shift and go to state 6
    show_tables                    shift and go to state 7
    insert                         shift and go to state 8
    select                         shift and go to state 9
    update                         shift and go to state 10
    delete                         shift and go to state 11
    drop_table                     shift and go to state 12
    drop_database                  shift and go to state 13
    exit                           shift and go to state 14

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . command SEMICOLON
    (4) statement -> . command
    (5) command -> . create_database
    (6) command -> . use_database
    (7) command -> . create_table
    (8) command -> . show_tables
    (9) command -> . insert
    (10) command -> . select
    (11) command -> . update
    (12) command -> . delete
    (13) command -> . drop_table
    (14) command -> . drop_database
    (15) command -> . exit
    (16) create_database -> . CREATE DATABASE ID
    (17) use_database -> . USE ID
    (18) create_table -> . CREATE TABLE ID LPAREN column_def_list RPAREN
    (23) show_tables -> . SHOW TABLES
    (24) insert -> . INSERT INTO ID VALUES LPAREN value_list RPAREN
    (30) select -> . SELECT select_fields FROM ID where_clause_opt
    (35) update -> . UPDATE ID SET ID EQ value where_clause_opt
    (36) delete -> . DELETE FROM ID where_clause_opt
    (37) drop_table -> . DROP TABLE ID
    (38) drop_database -> . DROP DATABASE ID
    (39) exit -> . EXIT

    CREATE          shift and go to state 15
    USE             shift and go to state 16
    SHOW            shift and go to state 17
    INSERT          shift and go to state 18
    SELECT          shift and go to state 19
    UPDATE          shift and go to state 20
    DELETE          shift and go to state 21
    DROP            shift and go to state 22
    EXIT            shift and go to state 23

    statement                      shift and go to state 24
    command                        shift and go to state 3
    create_database                shift and go to state 4
    use_database                   shift and go to state 5
    create_table                   shift and go to state 6
    show_tables                    shift and go to state 7
    insert                         shift and go to state 8
    select                         shift and go to state 9
    update                         shift and go to state 10
    delete                         shift and go to state 11
    drop_table                     shift and go to state 12
    drop_database                  shift and go to state 13
    exit                           shift and go to state 14

state 2

    (2) statements -> statement .

    CREATE          reduce using rule 2 (statements -> statement .)
    USE             reduce using rule 2 (statements -> statement .)
    SHOW            reduce using rule 2 (statements -> statement .)
    INSERT          reduce using rule 2 (statements -> statement .)
    SELECT          reduce using rule 2 (statements -> statement .)
    UPDATE          reduce using rule 2 (statements -> statement .)
    DELETE          reduce using rule 2 (statements -> statement .)
    DROP            reduce using rule 2 (statements -> statement .)
    EXIT            reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> command . SEMICOLON
    (4) statement -> command .

    SEMICOLON       shift and go to state 25
    CREATE          reduce using rule 4 (statement -> command .)
    USE             reduce using rule 4 (statement -> command .)
    SHOW            reduce using rule 4 (statement -> command .)
    INSERT          reduce using rule 4 (statement -> command .)
    SELECT          reduce using rule 4 (statement -> command .)
    UPDATE          reduce using rule 4 (statement -> command .)
    DELETE          reduce using rule 4 (statement -> command .)
    DROP            reduce using rule 4 (statement -> command .)
    EXIT            reduce using rule 4 (statement -> command .)
    $end            reduce using rule 4 (statement -> command .)


state 4

    (5) command -> create_database .

    SEMICOLON       reduce using rule 5 (command -> create_database .)
    CREATE          reduce using rule 5 (command -> create_database .)
    USE             reduce using rule 5 (command -> create_database .)
    SHOW            reduce using rule 5 (command -> create_database .)
    INSERT          reduce using rule 5 (command -> create_database .)
    SELECT          reduce using rule 5 (command -> create_database .)
    UPDATE          reduce using rule 5 (command -> create_database .)
    DELETE          reduce using rule 5 (command -> create_database .)
    DROP            reduce using rule 5 (command -> create_database .)
    EXIT            reduce using rule 5 (command -> create_database .)
    $end            reduce using rule 5 (command -> create_database .)


state 5

    (6) command -> use_database .

    SEMICOLON       reduce using rule 6 (command -> use_database .)
    CREATE          reduce using rule 6 (command -> use_database .)
    USE             reduce using rule 6 (command -> use_database .)
    SHOW            reduce using rule 6 (command -> use_database .)
    INSERT          reduce using rule 6 (command -> use_database .)
    SELECT          reduce using rule 6 (command -> use_database .)
    UPDATE          reduce using rule 6 (command -> use_database .)
    DELETE          reduce using rule 6 (command -> use_database .)
    DROP            reduce using rule 6 (command -> use_database .)
    EXIT            reduce using rule 6 (command -> use_database .)
    $end            reduce using rule 6 (command -> use_database .)


state 6

    (7) command -> create_table .

    SEMICOLON       reduce using rule 7 (command -> create_table .)
    CREATE          reduce using rule 7 (command -> create_table .)
    USE             reduce using rule 7 (command -> create_table .)
    SHOW            reduce using rule 7 (command -> create_table .)
    INSERT          reduce using rule 7 (command -> create_table .)
    SELECT          reduce using rule 7 (command -> create_table .)
    UPDATE          reduce using rule 7 (command -> create_table .)
    DELETE          reduce using rule 7 (command -> create_table .)
    DROP            reduce using rule 7 (command -> create_table .)
    EXIT            reduce using rule 7 (command -> create_table .)
    $end            reduce using rule 7 (command -> create_table .)


state 7

    (8) command -> show_tables .

    SEMICOLON       reduce using rule 8 (command -> show_tables .)
    CREATE          reduce using rule 8 (command -> show_tables .)
    USE             reduce using rule 8 (command -> show_tables .)
    SHOW            reduce using rule 8 (command -> show_tables .)
    INSERT          reduce using rule 8 (command -> show_tables .)
    SELECT          reduce using rule 8 (command -> show_tables .)
    UPDATE          reduce using rule 8 (command -> show_tables .)
    DELETE          reduce using rule 8 (command -> show_tables .)
    DROP            reduce using rule 8 (command -> show_tables .)
    EXIT            reduce using rule 8 (command -> show_tables .)
    $end            reduce using rule 8 (command -> show_tables .)


state 8

    (9) command -> insert .

    SEMICOLON       reduce using rule 9 (command -> insert .)
    CREATE          reduce using rule 9 (command -> insert .)
    USE             reduce using rule 9 (command -> insert .)
    SHOW            reduce using rule 9 (command -> insert .)
    INSERT          reduce using rule 9 (command -> insert .)
    SELECT          reduce using rule 9 (command -> insert .)
    UPDATE          reduce using rule 9 (command -> insert .)
    DELETE          reduce using rule 9 (command -> insert .)
    DROP            reduce using rule 9 (command -> insert .)
    EXIT            reduce using rule 9 (command -> insert .)
    $end            reduce using rule 9 (command -> insert .)


state 9

    (10) command -> select .

    SEMICOLON       reduce using rule 10 (command -> select .)
    CREATE          reduce using rule 10 (command -> select .)
    USE             reduce using rule 10 (command -> select .)
    SHOW            reduce using rule 10 (command -> select .)
    INSERT          reduce using rule 10 (command -> select .)
    SELECT          reduce using rule 10 (command -> select .)
    UPDATE          reduce using rule 10 (command -> select .)
    DELETE          reduce using rule 10 (command -> select .)
    DROP            reduce using rule 10 (command -> select .)
    EXIT            reduce using rule 10 (command -> select .)
    $end            reduce using rule 10 (command -> select .)


state 10

    (11) command -> update .

    SEMICOLON       reduce using rule 11 (command -> update .)
    CREATE          reduce using rule 11 (command -> update .)
    USE             reduce using rule 11 (command -> update .)
    SHOW            reduce using rule 11 (command -> update .)
    INSERT          reduce using rule 11 (command -> update .)
    SELECT          reduce using rule 11 (command -> update .)
    UPDATE          reduce using rule 11 (command -> update .)
    DELETE          reduce using rule 11 (command -> update .)
    DROP            reduce using rule 11 (command -> update .)
    EXIT            reduce using rule 11 (command -> update .)
    $end            reduce using rule 11 (command -> update .)


state 11

    (12) command -> delete .

    SEMICOLON       reduce using rule 12 (command -> delete .)
    CREATE          reduce using rule 12 (command -> delete .)
    USE             reduce using rule 12 (command -> delete .)
    SHOW            reduce using rule 12 (command -> delete .)
    INSERT          reduce using rule 12 (command -> delete .)
    SELECT          reduce using rule 12 (command -> delete .)
    UPDATE          reduce using rule 12 (command -> delete .)
    DELETE          reduce using rule 12 (command -> delete .)
    DROP            reduce using rule 12 (command -> delete .)
    EXIT            reduce using rule 12 (command -> delete .)
    $end            reduce using rule 12 (command -> delete .)


state 12

    (13) command -> drop_table .

    SEMICOLON       reduce using rule 13 (command -> drop_table .)
    CREATE          reduce using rule 13 (command -> drop_table .)
    USE             reduce using rule 13 (command -> drop_table .)
    SHOW            reduce using rule 13 (command -> drop_table .)
    INSERT          reduce using rule 13 (command -> drop_table .)
    SELECT          reduce using rule 13 (command -> drop_table .)
    UPDATE          reduce using rule 13 (command -> drop_table .)
    DELETE          reduce using rule 13 (command -> drop_table .)
    DROP            reduce using rule 13 (command -> drop_table .)
    EXIT            reduce using rule 13 (command -> drop_table .)
    $end            reduce using rule 13 (command -> drop_table .)


state 13

    (14) command -> drop_database .

    SEMICOLON       reduce using rule 14 (command -> drop_database .)
    CREATE          reduce using rule 14 (command -> drop_database .)
    USE             reduce using rule 14 (command -> drop_database .)
    SHOW            reduce using rule 14 (command -> drop_database .)
    INSERT          reduce using rule 14 (command -> drop_database .)
    SELECT          reduce using rule 14 (command -> drop_database .)
    UPDATE          reduce using rule 14 (command -> drop_database .)
    DELETE          reduce using rule 14 (command -> drop_database .)
    DROP            reduce using rule 14 (command -> drop_database .)
    EXIT            reduce using rule 14 (command -> drop_database .)
    $end            reduce using rule 14 (command -> drop_database .)


state 14

    (15) command -> exit .

    SEMICOLON       reduce using rule 15 (command -> exit .)
    CREATE          reduce using rule 15 (command -> exit .)
    USE             reduce using rule 15 (command -> exit .)
    SHOW            reduce using rule 15 (command -> exit .)
    INSERT          reduce using rule 15 (command -> exit .)
    SELECT          reduce using rule 15 (command -> exit .)
    UPDATE          reduce using rule 15 (command -> exit .)
    DELETE          reduce using rule 15 (command -> exit .)
    DROP            reduce using rule 15 (command -> exit .)
    EXIT            reduce using rule 15 (command -> exit .)
    $end            reduce using rule 15 (command -> exit .)


state 15

    (16) create_database -> CREATE . DATABASE ID
    (18) create_table -> CREATE . TABLE ID LPAREN column_def_list RPAREN

    DATABASE        shift and go to state 26
    TABLE           shift and go to state 27


state 16

    (17) use_database -> USE . ID

    ID              shift and go to state 28


state 17

    (23) show_tables -> SHOW . TABLES

    TABLES          shift and go to state 29


state 18

    (24) insert -> INSERT . INTO ID VALUES LPAREN value_list RPAREN

    INTO            shift and go to state 30


state 19

    (30) select -> SELECT . select_fields FROM ID where_clause_opt
    (31) select_fields -> . STAR
    (32) select_fields -> . id_list
    (33) id_list -> . ID
    (34) id_list -> . id_list COMMA ID

    STAR            shift and go to state 33
    ID              shift and go to state 32

    select_fields                  shift and go to state 31
    id_list                        shift and go to state 34

state 20

    (35) update -> UPDATE . ID SET ID EQ value where_clause_opt

    ID              shift and go to state 35


state 21

    (36) delete -> DELETE . FROM ID where_clause_opt

    FROM            shift and go to state 36


state 22

    (37) drop_table -> DROP . TABLE ID
    (38) drop_database -> DROP . DATABASE ID

    TABLE           shift and go to state 37
    DATABASE        shift and go to state 38


state 23

    (39) exit -> EXIT .

    SEMICOLON       reduce using rule 39 (exit -> EXIT .)
    CREATE          reduce using rule 39 (exit -> EXIT .)
    USE             reduce using rule 39 (exit -> EXIT .)
    SHOW            reduce using rule 39 (exit -> EXIT .)
    INSERT          reduce using rule 39 (exit -> EXIT .)
    SELECT          reduce using rule 39 (exit -> EXIT .)
    UPDATE          reduce using rule 39 (exit -> EXIT .)
    DELETE          reduce using rule 39 (exit -> EXIT .)
    DROP            reduce using rule 39 (exit -> EXIT .)
    EXIT            reduce using rule 39 (exit -> EXIT .)
    $end            reduce using rule 39 (exit -> EXIT .)


state 24

    (1) statements -> statements statement .

    CREATE          reduce using rule 1 (statements -> statements statement .)
    USE             reduce using rule 1 (statements -> statements statement .)
    SHOW            reduce using rule 1 (statements -> statements statement .)
    INSERT          reduce using rule 1 (statements -> statements statement .)
    SELECT          reduce using rule 1 (statements -> statements statement .)
    UPDATE          reduce using rule 1 (statements -> statements statement .)
    DELETE          reduce using rule 1 (statements -> statements statement .)
    DROP            reduce using rule 1 (statements -> statements statement .)
    EXIT            reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)


state 25

    (3) statement -> command SEMICOLON .

    CREATE          reduce using rule 3 (statement -> command SEMICOLON .)
    USE             reduce using rule 3 (statement -> command SEMICOLON .)
    SHOW            reduce using rule 3 (statement -> command SEMICOLON .)
    INSERT          reduce using rule 3 (statement -> command SEMICOLON .)
    SELECT          reduce using rule 3 (statement -> command SEMICOLON .)
    UPDATE          reduce using rule 3 (statement -> command SEMICOLON .)
    DELETE          reduce using rule 3 (statement -> command SEMICOLON .)
    DROP            reduce using rule 3 (statement -> command SEMICOLON .)
    EXIT            reduce using rule 3 (statement -> command SEMICOLON .)
    $end            reduce using rule 3 (statement -> command SEMICOLON .)


state 26

    (16) create_database -> CREATE DATABASE . ID

    ID              shift and go to state 39


state 27

    (18) create_table -> CREATE TABLE . ID LPAREN column_def_list RPAREN

    ID              shift and go to state 40


state 28

    (17) use_database -> USE ID .

    SEMICOLON       reduce using rule 17 (use_database -> USE ID .)
    CREATE          reduce using rule 17 (use_database -> USE ID .)
    USE             reduce using rule 17 (use_database -> USE ID .)
    SHOW            reduce using rule 17 (use_database -> USE ID .)
    INSERT          reduce using rule 17 (use_database -> USE ID .)
    SELECT          reduce using rule 17 (use_database -> USE ID .)
    UPDATE          reduce using rule 17 (use_database -> USE ID .)
    DELETE          reduce using rule 17 (use_database -> USE ID .)
    DROP            reduce using rule 17 (use_database -> USE ID .)
    EXIT            reduce using rule 17 (use_database -> USE ID .)
    $end            reduce using rule 17 (use_database -> USE ID .)


state 29

    (23) show_tables -> SHOW TABLES .

    SEMICOLON       reduce using rule 23 (show_tables -> SHOW TABLES .)
    CREATE          reduce using rule 23 (show_tables -> SHOW TABLES .)
    USE             reduce using rule 23 (show_tables -> SHOW TABLES .)
    SHOW            reduce using rule 23 (show_tables -> SHOW TABLES .)
    INSERT          reduce using rule 23 (show_tables -> SHOW TABLES .)
    SELECT          reduce using rule 23 (show_tables -> SHOW TABLES .)
    UPDATE          reduce using rule 23 (show_tables -> SHOW TABLES .)
    DELETE          reduce using rule 23 (show_tables -> SHOW TABLES .)
    DROP            reduce using rule 23 (show_tables -> SHOW TABLES .)
    EXIT            reduce using rule 23 (show_tables -> SHOW TABLES .)
    $end            reduce using rule 23 (show_tables -> SHOW TABLES .)


state 30

    (24) insert -> INSERT INTO . ID VALUES LPAREN value_list RPAREN

    ID              shift and go to state 41


state 31

    (30) select -> SELECT select_fields . FROM ID where_clause_opt

    FROM            shift and go to state 42


state 32

    (33) id_list -> ID .

    COMMA           reduce using rule 33 (id_list -> ID .)
    FROM            reduce using rule 33 (id_list -> ID .)


state 33

    (31) select_fields -> STAR .

    FROM            reduce using rule 31 (select_fields -> STAR .)


state 34

    (32) select_fields -> id_list .
    (34) id_list -> id_list . COMMA ID

    FROM            reduce using rule 32 (select_fields -> id_list .)
    COMMA           shift and go to state 43


state 35

    (35) update -> UPDATE ID . SET ID EQ value where_clause_opt

    SET             shift and go to state 44


state 36

    (36) delete -> DELETE FROM . ID where_clause_opt

    ID              shift and go to state 45


state 37

    (37) drop_table -> DROP TABLE . ID

    ID              shift and go to state 46


state 38

    (38) drop_database -> DROP DATABASE . ID

    ID              shift and go to state 47


state 39

    (16) create_database -> CREATE DATABASE ID .

    SEMICOLON       reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    CREATE          reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    USE             reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    SHOW            reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    INSERT          reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    SELECT          reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    UPDATE          reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    DELETE          reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    DROP            reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    EXIT            reduce using rule 16 (create_database -> CREATE DATABASE ID .)
    $end            reduce using rule 16 (create_database -> CREATE DATABASE ID .)


state 40

    (18) create_table -> CREATE TABLE ID . LPAREN column_def_list RPAREN

    LPAREN          shift and go to state 48


state 41

    (24) insert -> INSERT INTO ID . VALUES LPAREN value_list RPAREN

    VALUES          shift and go to state 49


state 42

    (30) select -> SELECT select_fields FROM . ID where_clause_opt

    ID              shift and go to state 50


state 43

    (34) id_list -> id_list COMMA . ID

    ID              shift and go to state 51


state 44

    (35) update -> UPDATE ID SET . ID EQ value where_clause_opt

    ID              shift and go to state 52


state 45

    (36) delete -> DELETE FROM ID . where_clause_opt
    (40) where_clause_opt -> . WHERE expr
    (41) where_clause_opt -> . empty
    (52) empty -> .

    WHERE           shift and go to state 54
    SEMICOLON       reduce using rule 52 (empty -> .)
    CREATE          reduce using rule 52 (empty -> .)
    USE             reduce using rule 52 (empty -> .)
    SHOW            reduce using rule 52 (empty -> .)
    INSERT          reduce using rule 52 (empty -> .)
    SELECT          reduce using rule 52 (empty -> .)
    UPDATE          reduce using rule 52 (empty -> .)
    DELETE          reduce using rule 52 (empty -> .)
    DROP            reduce using rule 52 (empty -> .)
    EXIT            reduce using rule 52 (empty -> .)
    $end            reduce using rule 52 (empty -> .)

    where_clause_opt               shift and go to state 53
    empty                          shift and go to state 55

state 46

    (37) drop_table -> DROP TABLE ID .

    SEMICOLON       reduce using rule 37 (drop_table -> DROP TABLE ID .)
    CREATE          reduce using rule 37 (drop_table -> DROP TABLE ID .)
    USE             reduce using rule 37 (drop_table -> DROP TABLE ID .)
    SHOW            reduce using rule 37 (drop_table -> DROP TABLE ID .)
    INSERT          reduce using rule 37 (drop_table -> DROP TABLE ID .)
    SELECT          reduce using rule 37 (drop_table -> DROP TABLE ID .)
    UPDATE          reduce using rule 37 (drop_table -> DROP TABLE ID .)
    DELETE          reduce using rule 37 (drop_table -> DROP TABLE ID .)
    DROP            reduce using rule 37 (drop_table -> DROP TABLE ID .)
    EXIT            reduce using rule 37 (drop_table -> DROP TABLE ID .)
    $end            reduce using rule 37 (drop_table -> DROP TABLE ID .)


state 47

    (38) drop_database -> DROP DATABASE ID .

    SEMICOLON       reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    CREATE          reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    USE             reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    SHOW            reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    INSERT          reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    SELECT          reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    UPDATE          reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    DELETE          reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    DROP            reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    EXIT            reduce using rule 38 (drop_database -> DROP DATABASE ID .)
    $end            reduce using rule 38 (drop_database -> DROP DATABASE ID .)


state 48

    (18) create_table -> CREATE TABLE ID LPAREN . column_def_list RPAREN
    (19) column_def_list -> . column_def
    (20) column_def_list -> . column_def_list COMMA column_def
    (21) column_def -> . ID INT
    (22) column_def -> . ID CHAR LPAREN NUMBER RPAREN

    ID              shift and go to state 56

    column_def_list                shift and go to state 57
    column_def                     shift and go to state 58

state 49

    (24) insert -> INSERT INTO ID VALUES . LPAREN value_list RPAREN

    LPAREN          shift and go to state 59


state 50

    (30) select -> SELECT select_fields FROM ID . where_clause_opt
    (40) where_clause_opt -> . WHERE expr
    (41) where_clause_opt -> . empty
    (52) empty -> .

    WHERE           shift and go to state 54
    SEMICOLON       reduce using rule 52 (empty -> .)
    CREATE          reduce using rule 52 (empty -> .)
    USE             reduce using rule 52 (empty -> .)
    SHOW            reduce using rule 52 (empty -> .)
    INSERT          reduce using rule 52 (empty -> .)
    SELECT          reduce using rule 52 (empty -> .)
    UPDATE          reduce using rule 52 (empty -> .)
    DELETE          reduce using rule 52 (empty -> .)
    DROP            reduce using rule 52 (empty -> .)
    EXIT            reduce using rule 52 (empty -> .)
    $end            reduce using rule 52 (empty -> .)

    where_clause_opt               shift and go to state 60
    empty                          shift and go to state 55

state 51

    (34) id_list -> id_list COMMA ID .

    COMMA           reduce using rule 34 (id_list -> id_list COMMA ID .)
    FROM            reduce using rule 34 (id_list -> id_list COMMA ID .)


state 52

    (35) update -> UPDATE ID SET ID . EQ value where_clause_opt

    EQ              shift and go to state 61


state 53

    (36) delete -> DELETE FROM ID where_clause_opt .
